# handlers/api.go
@@ -26,11 +26,23 @@ type CreateContainerResponse struct {
 }
 
 // Add new types
+// CreateContainerRequest represents the request body for container creation
+// @Description Request body for creating a new container
 type CreateContainerRequest struct {
+    // The ID of the image to use for the container
+    // @example ubuntu-base
     ImageID string `json:"image_id" validate:"required"`
 }
 
 // Add new handler
+// ListImagesHandler godoc
+// @Summary     List available images
+// @Description Get a list of all available container images
+// @Tags        images
+// @Accept      json
+// @Produce     json
+// @Success     200 {array}  docker.ImageInfo
+// @Router      /containers/images [get]
 func ListImagesHandler(dm *docker.DockerManager) http.HandlerFunc {
     return func(w http.ResponseWriter, r *http.Request) {
         images := dm.ListAvailableImages()
@@ -40,6 +52,17 @@ func ListImagesHandler(dm *docker.DockerManager) http.HandlerFunc {
 }
 
 // Modify CreateContainerHandler
+// CreateContainerHandler godoc
+// @Summary     Create a new container
+// @Description Create a new container from a specified image
+// @Tags        containers
+// @Accept      json
+// @Produce     json
+// @Param       request body CreateContainerRequest true "Container creation request"
+// @Success     200 {object} CreateContainerResponse
+// @Failure     400 {string} string "Bad Request"
+// @Failure     500 {string} string "Internal Server Error"
+// @Router      /containers [post]
 func CreateContainerHandler(dm *docker.DockerManager) http.HandlerFunc {
     return func(w http.ResponseWriter, r *http.Request) {
         var req CreateContainerRequest
@@ -65,6 +88,16 @@ func CreateContainerHandler(dm *docker.DockerManager) http.HandlerFunc {
     }
 }
 
+// GetContainerStatusHandler godoc
+// @Summary     Get container status
+// @Description Get the current status of a container
+// @Tags        containers
+// @Accept      json
+// @Produce     json
+// @Param       id path string true "Container ID"
+// @Success     200 {object} docker.ContainerStatus
+// @Failure     404 {string} string "Container not found"
+// @Router      /containers/{id}/status [get]
 func GetContainerStatusHandler(dm *docker.DockerManager) http.HandlerFunc {
     return func(w http.ResponseWriter, r *http.Request) {
         containerID := chi.URLParam(r, "id")
